kubernetes/dev/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-app-svc
spec:
  ports:
  - port: 80
    targetPort: 3333
    protocol: TCP
    name: http
  selector:
    name: nest-app
