kubernetes/dev/postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nest-pg
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: nest-pg
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_DB
              value: smart
          image: postgres:alpine
          imagePullPolicy: Never
          name: postgresql
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
   name: pgsql-service
spec:
   type: ClusterIP
   ports:
   - protocol: TCP
     port: 5432
     targetPort: 5432
