kubernetes/dev/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nest-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nest-app-svc
          servicePort: 80
